# rust2

./: Cargo.toml
src/: main.rs
